fix box shadow on mobile menu

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -257,8 +257,7 @@ nav {
 
   .mobile-menu {
     background-color: var(--primary-color);
-    box-shadow: -5px 5px 5px var(--secondary-color);
-    border-left: 1px solid var(--secondary-color);
+    box-shadow: -1px 1px 3px var(--bright-color);
     padding: 10px 20px;
     border-bottom-left-radius: 10px;
     position: absolute;
